--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
     "@tailwindcss/vite": "^4.1.18",
     "clsx": "^2.1.1",
     "pinia": "^3.0.4",
